--- a/clock.html
+++ b/clock.html
@@ -7,10 +7,14 @@
       <link rel="stylesheet" href="clockStyle.css">
    </head>
    <body>
+      <div class="center">
       <div>
          <div style="color: white;">The Time is: </div>
          <div id="Clock" class="glow">00:00:00</div>
+
+         <button onclick="location.href = 'index.html'" id="btns" class="btns" >Home</button>
       </div>
+   </div>
       <script src= clockScript.js></script>
    </body>
 </html>
