--- a/calc.html
+++ b/calc.html
@@ -7,7 +7,7 @@
     <script src="calcScript.js"></script>
 </head>
 <body>
-	<div>
+	<div class="center">
 		<header id="screen"></header>
 		<table>
 		
@@ -44,6 +44,8 @@
 				</tr>	
 			</tbody>
 		</table>
+		
+		<button onclick="location.href = 'index.html'" id="btns" class="btns" >Home</button>
 	</div>
 </body>
 </html>
